# hfppl

./: pyproject.toml
hfppl/: llms.py
hfppl/distributions/: logcategorical.py  tokencategorical.py
